[package]
name = "wei-transmission"
version = "0.1.0"
edition = "2021"
description = "管理torrent的下载"
documentation = "https://github.com/zuiyue-com/wei-transmission"
homepage = "https://github.com/zuiyue-com/wei-transmission"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.4"
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }